# moco

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  qodana.yaml
.github/workflows/: qodana_code_quality.yml
src/: env.c  env.h  interface.c  interface.h  m_exit.c  m_exit.h  main.c  main.h
src/command/: init.c  init.h
src/command/install/: install.c  install.h
src/command/login/: curl.c  curl.h  login.c  login.h  oauth2.c  oauth2.h
src/command/search/: search.c  search.h
src/command/start/: start.c  start.h
src/command/update/: update.c  update.h
src/utility/: mtool.c  mtool.h
src/utility/download/: download.c  download.h  m_epoll.c  m_epoll.h
src/utility/file/: json.c  json.h  toml.c  toml.h
src/utility/store/: store.c  store.h
